--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "Dziekan_cv",
   "version": "0.0.0",
   "private": true,
+  "main": "bin/www.js",
   "scripts": {
-    "start": "node bin/www.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -19,5 +20,8 @@
     "node-sass-middleware": "0.8.0",
     "serve-favicon": "~2.3.0",
     "waypoints": "^4.0.0"
-  }
+  },
+  "engines": {
+    "node": "4.3.1"
+  },
 }
