--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "blueimp-bootstrap-image-gallery": "^3.4.2",
+    "blueimp-gallery": "^2.18.1",
     "body-parser": "~1.13.2",
     "bootstrap-sass": "^3.3.6",
     "cookie-parser": "~1.3.5",
